plugins {
    id 'java'
}


version = '1.0.0'

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

java {
    sourceCompatibility = '23(preview)'
    targetCompatibility = '23(preview)'
}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:33.3.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.17.0'
}